k3s/cluster/apps/nas-attached/calibre/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  namespace: calibre
spec:
  selector:
    app.kubernetes.io/name: calibre-web-automated
    app.kubernetes.io/component: app
  ports:
    - name: http
      port: 80
      targetPort: http
